--- a/ansible/redis.yml
+++ b/ansible/redis.yml
@@ -9,3 +9,19 @@
 
     - name: Ensure Redis is started
       service: name=redis-server state=started enabled=yes
+
+    - name: Ensure Redis parameters are configured
+      lineinfile:
+        dest: /etc/redis/redis.conf
+        regexp: "{{ item.line_to_match }}"
+        line: "{{ item.line_to_configure }}"
+      with_items:
+        - { line_to_match: "maxmemory", line_to_configure: "maxmemory 512" }
+        - { line_to_match: "bind", line_to_configure: "bind 0.0.0.0" }
+        - { line_to_match: "maxmemory-policy", line_to_configure: "maxmemory-policy allkeys-lru" }
+        - { line_to_match: "maxmemory-samples", line_to_configure: "maxmemory-samples 10" }
+        - { line_to_match: "requirepass", line_to_configure: "requirepass foobared" }
+        - { line_to_match: "protected-mode", line_to_configure: "protected-mode no" }
+
+    - name: Ensure redis service is restarted
+      service: name=redis state=restarted
