Use redis ppa to run redis 6.x

--- a/ansible/redis.yml
+++ b/ansible/redis.yml
@@ -4,6 +4,10 @@
   hosts: redis
 
   tasks:
+    - name: Add redis ppa
+      ansible.builtin.apt_repository:
+        repo: 'ppa:chris-lea/redis-server'
+
     - name: Ensure Redis is present
       apt: pkg=redis-server state=latest
 
