--- a/ansible/redis.yml
+++ b/ansible/redis.yml
@@ -36,4 +36,5 @@
       become_user: devops
       ansible.builtin.shell: |
         echo "ACL SETUSER {{ lookup('amazon.aws.aws_secret', 'colosseum_secrets.redis_user', nested=True) }} allkeys allcommands on >{{ lookup('amazon.aws.aws_secret', 'colosseum_secrets.redis_password', nested=True) }}" | redis-cli
+        echo "ACL SETUSER default off" | redis-cli
         echo "CONFIG REWRITE" | redis-cli
