--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -14,6 +14,8 @@
           - sudo
           - python3.10-full
           - prometheus-node-exporter
+          - liblzma-dev  # Necessary to handle xz files
+          - libmagic1  # For mime detection
         state: present
         update_cache: yes
         cache_valid_time: 3600
