--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -11,6 +11,9 @@
       - prometheus-node-exporter
       - liblzma-dev  # Necessary to handle xz files
       - libmagic1  # For mime detection
+      - neovim
+      - file
+      - htop
     state: present
     update_cache: yes
     cache_valid_time: 3600
