--- a/ansible/roles/bootstrap/tasks/main.yml
+++ b/ansible/roles/bootstrap/tasks/main.yml
@@ -6,14 +6,15 @@
 - name: Refresh apt and install base packages
   apt:
     pkg:
-      - sudo
-      - python3.10-full
-      - prometheus-node-exporter
+      - file
+      - htop
       - liblzma-dev  # Necessary to handle xz files
       - libmagic1  # For mime detection
       - neovim
-      - file
-      - htop
+      - prometheus-node-exporter
+      - python-is-python3
+      - python3.10-full
+      - sudo
     state: present
     update_cache: yes
     cache_valid_time: 3600
