Add tags to colloseum_worker role

--- a/ansible/colosseum_workers.yml
+++ b/ansible/colosseum_workers.yml
@@ -1,5 +1,7 @@
 ---
 - hosts: colosseum_workers
   roles:
-    - bootstrap
-    - colosseum_worker
+    - role: bootstrap
+      tags: ['bootstrap']
+    - role: colosseum_worker
+      tags: ['colosseum_worker']
