--- a/ansible/roles/bootstrap/tasks/main.yml
+++ b/ansible/roles/bootstrap/tasks/main.yml
@@ -19,6 +19,9 @@
     update_cache: yes
     cache_valid_time: 3600
 
+- name: Ensure python3 is python3.10
+  command: update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 10
+
 - name: Make sure we have a 'wheel' group
   group:
     name: wheel
