Ensure python3 is 3.10 and that it has python-apt

--- a/ansible/roles/bootstrap/tasks/main.yml
+++ b/ansible/roles/bootstrap/tasks/main.yml
@@ -20,7 +20,16 @@
     cache_valid_time: 3600
 
 - name: Ensure python3 is python3.10
-  command: update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 10
+  ansible.builtin.command: "update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 10"
+
+- name: Ensure python-apt is present
+  apt:
+    pkg:
+      - python-apt
+      - python3-apt
+    state: present
+    update_cache: yes
+    cache_valid_time: 3600
 
 - name: Make sure we have a 'wheel' group
   group:
