--- a/ansible/roles/bootstrap/tasks/main.yml
+++ b/ansible/roles/bootstrap/tasks/main.yml
@@ -15,6 +15,8 @@
       - python-is-python3
       - python3.10-full
       - sudo
+      - python-apt
+      - python3-apt
     state: present
     update_cache: yes
     cache_valid_time: 3600
