--- a/ansible/colosseum_workers.yml
+++ b/ansible/colosseum_workers.yml
@@ -3,5 +3,13 @@
   roles:
     - role: bootstrap
       tags: ['bootstrap']
+    - role: staticdev.pyenv
+      pyenv_path: "/home/devops/pyenv"
+      pyenv_owner: "devops"
+      pyenv_global:
+        - 3.10.0
+      pyenv_python_versions:
+        - 3.10.0
+      tags: ['python']
     - role: colosseum_worker
       tags: ['colosseum_worker']
