--- a/ansible/roles/bootstrap/tasks/main.yml
+++ b/ansible/roles/bootstrap/tasks/main.yml
@@ -12,8 +12,8 @@
       - libmagic1  # For mime detection
       - neovim
       - prometheus-node-exporter
-      - python-is-python3
-      - python3.10-full
+      #- python-is-python3
+      #- python3.10-full
       - sudo
       - python-apt
       - python3-apt
@@ -21,17 +21,17 @@
     update_cache: yes
     cache_valid_time: 3600
 
-- name: Ensure python3 is python3.10
-  ansible.builtin.command: "update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 10"
+#- name: Ensure python3 is python3.10
+  #ansible.builtin.command: "update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 10"
 
-- name: Ensure python-apt is present
-  apt:
-    pkg:
-      - python-apt
-      - python3-apt
-    state: present
-    update_cache: yes
-    cache_valid_time: 3600
+#- name: Ensure python-apt is present
+  #apt:
+    #pkg:
+      #- python-apt
+      #- python3-apt
+    #state: present
+    #update_cache: yes
+    #cache_valid_time: 3600
 
 - name: Make sure we have a 'wheel' group
   group:
@@ -72,16 +72,6 @@
   ansible.builtin.service:
     name: sshd
     state: restarted
-
-- name: Setup poetry
-  ansible.builtin.shell: |
-    python3.10 -m ensurepip
-    python3.10 -m pip install poetry
-  become: yes
-  become_method: sudo
-  become_user: devops
-  vars:
-    allow_world_readable_tmpfiles: true
 
 - name: Ensure prometheus-node-exporter is started
   service: name=prometheus-node-exporter state=started enabled=yes
