--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -6,24 +6,46 @@
       dest: /home/devops/colosseum
       version: develop  # FIXME: Should be a release branch
 
+  - name: Ensure poetry dependencies are installed
+    package:
+      name: "{{ item }}"
+      state: present
+    become: true
+    with_items:
+      - python3-pip
+      - python3-venv
+
+  - name: Check if poetry is installed
+    command: "/home/devops/.local/bin/poetry"
+    register: poetry_cmd
+    changed_when: false
+    ignore_errors: true
+
+  - name: Download poetry installer
+    get_url:
+      url: https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py
+      dest: "/home/devops/install-poetry.py"
+      timeout: 20
+    when: poetry_cmd is failed
+
+  - name: Install poetry
+    command: "/home/devops/pyenv/shims/python3 /home/devops/install-poetry.py"
+    when: poetry_cmd is failed
+
   - name: Ensure the workers are not running
     ansible.builtin.command: pkill -f tournament_online
     ignore_errors: yes
 
   - name: Install project deps with Poetry
-    environment:
-      PATH: "{{ ansible_env.HOME }}/.poetry/bin:{{ ansible_env.PATH }}"
-    shell: "poetry install"
+    shell: "python -m poetry install"
     args:
       chdir: "/home/devops/colosseum"
 
   - name: Start workers
-    environment:
-      PATH: "{{ ansible_env.HOME }}/.poetry/bin:{{ ansible_env.PATH }}"
-    shell: "for i in `seq 3`; do sleep 1; while [[ true ]]; do; poetry run python tournament_online.py; done &; done"
+    shell: "for i in `seq 3`; do sleep 1; while [[ true ]]; do; python -m poetry run python tournament_online.py; done &; done"
     args:
       chdir: "/home/devops/colosseum"
 
-  become: yes
-  become_method: sudo
+  become: true
+  become_method: su
   become_user: devops
