--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -20,6 +20,15 @@
     args:
       chdir: "/home/devops/colosseum"
 
+  - name: Decrypt and copy secret file
+    copy:
+      src: dot_env
+      dest: /home/devops/colosseum/.env
+      decrypt: true
+      owner: devops
+      group: devops
+      mode: '0400'  # Read only to owner
+
   - name: Start workers
     shell: "/home/devops/pyenv/shims/python -m poetry run python tournament_online.py"
     args:
