--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -6,11 +6,6 @@
       dest: /home/devops/colosseum
       version: develop  # FIXME: Should be a release branch
 
-  - name: Ensure the workers are not running
-    ansible.builtin.command: pkill -f tournament_online
-    ignore_errors: yes
-    become: true
-
   - name: Ensure poetry is available
     command: "/home/devops/pyenv/shims/python -m pip install poetry"
     ignore_errors: yes
@@ -29,10 +24,20 @@
       group: devops
       mode: '0400'  # Read only to owner
 
-  - name: Start workers
-    shell: "/home/devops/pyenv/shims/python -m poetry run python tournament_online.py"
+  - name: Stop all workers
+    shell: |
+      pkill tournament_online || true
     args:
-      chdir: "/home/devops/colosseum"
+      executable: /bin/bash
+      chdir: /home/devops/colosseum
+
+  - name: Start worker
+    shell: |
+      /home/devops/pyenv/shims/python3 -m poetry run python3 tournament_online.py --loop &
+      /home/devops/pyenv/shims/python3 -m poetry run python3 tournament_online.py --loop &
+    args:
+      executable: /bin/bash
+      chdir: /home/devops/colosseum
 
   become: true
   become_method: su
