Fix old workers not being killed

--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -26,10 +26,11 @@
 
   - name: Stop all workers
     shell: |
-      pkill tournament_online || true
+      pkill -f tournament_online
     args:
       executable: /bin/bash
       chdir: /home/devops/colosseum
+    become: yes
 
   - name: Start worker
     shell: |
