Fix workers somehow dying
The --loop was leaking processes, and dying. Using a single job worker
on a loop seems to be more resilient.

--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -34,8 +34,8 @@
 
   - name: Start worker
     shell: |
-      /home/devops/pyenv/shims/python3 -m poetry run python3 tournament_online.py --loop &
-      /home/devops/pyenv/shims/python3 -m poetry run python3 tournament_online.py --loop &
+      while [[ true ]]; do /home/devops/pyenv/shims/python3 -m poetry run python3 tournament_online.py; done &
+      while [[ true ]]; do /home/devops/pyenv/shims/python3 -m poetry run python3 tournament_online.py; done &
     args:
       executable: /bin/bash
       chdir: /home/devops/colosseum
