Always deploy from production branch

--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -4,7 +4,7 @@
     ansible.builtin.git:
       repo: 'https://github.com/h3nnn4n/colosseum'
       dest: /home/devops/colosseum
-      version: develop  # FIXME: Should be a release branch
+      version: production
 
   - name: Ensure poetry is available
     command: "/home/devops/pyenv/shims/python -m pip install poetry"
