--- a/ansible/web_servers.yml
+++ b/ansible/web_servers.yml
@@ -1,5 +1,17 @@
 ---
 - hosts: web_servers
   roles:
-    - bootstrap
-    - web_server
+    - role: bootstrap
+      tags: ['bootstrap']
+
+    - role: staticdev.pyenv
+      pyenv_path: "/home/devops/pyenv"
+      pyenv_owner: "devops"
+      pyenv_global:
+        - 3.10.0
+      pyenv_python_versions:
+        - 3.10.0
+      tags: ['python']
+
+    - role: web_server
+      tags: ['web_server']
