--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -33,3 +33,8 @@
 
 - name: Generate and install certificates
   command: certbot run --nginx --redirect --non-interactive --expand --agree-tos --email colosseum@h3nnn4n.me --domain api.colosseum.website --domain www.colosseum.website --domain colosseum.website
+
+- name: Restart service httpd, in all cases
+  service:
+    name: nginx
+    state: restarted
