--- a/ansible/roles/web_server/tasks/main.yml
+++ b/ansible/roles/web_server/tasks/main.yml
@@ -50,7 +50,7 @@
 
   - name: Ensure Gunicorn is not running
     shell: |
-      pgrep --full --list-name gunicorn && pkill --full gunicorn || true
+      pgrep --full --list-name bin/gunicorn && pkill --full bin/gunicorn || true
     args:
       executable: /bin/bash
       chdir: /home/devops/colosseum_website
