--- a/ansible/roles/web_server/tasks/main.yml
+++ b/ansible/roles/web_server/tasks/main.yml
@@ -50,7 +50,7 @@
 
   - name: Ensure Gunicorn is not running
     shell: |
-      pgrep --full --list-name "poetry.*gunicorn" && pkill --full "poetry.*gunicorn" || true
+      pkill --full "poetry.*gunicorn" || true
     args:
       executable: /bin/bash
       chdir: /home/devops/colosseum_website
