--- a/ansible/roles/web_server/tasks/main.yml
+++ b/ansible/roles/web_server/tasks/main.yml
@@ -66,7 +66,7 @@
         --preload \
         --timeout 30 \
         --worker-class sync \
-        --workers=5 &
+        --workers 5 > stuff.log &
     args:
       executable: /bin/bash
       chdir: /home/devops/colosseum_website
