Add role to install docker

--- a/ansible/colosseum_workers.yml
+++ b/ansible/colosseum_workers.yml
@@ -13,5 +13,8 @@
         - 3.10.0
       tags: ['python']
 
+    - role: docker
+      tags: ['colosseum_worker']
+
     - role: colosseum_worker
       tags: ['colosseum_worker']
