--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -3,22 +3,22 @@
   - name: Checkout colosseum
     ansible.builtin.git:
       repo: 'https://github.com/h3nnn4n/colosseum'
-      dest: /home/devops/colosseum
+      dest: '{{ install_folder }}/colosseum'
       version: production
 
   - name: Ensure poetry is available
-    command: "/home/devops/pyenv/shims/python -m pip install poetry"
+    command: "{{ install_folder }}/pyenv/shims/python -m pip install poetry"
     ignore_errors: yes
 
   - name: Install project deps with Poetry
-    shell: "/home/devops/pyenv/shims/python3 -m poetry install"
+    shell: "{{ install_folder }}/pyenv/shims/python3 -m poetry install"
     args:
-      chdir: "/home/devops/colosseum"
+      chdir: "{{ install_folder }}/colosseum"
 
   - name: Decrypt and copy secret file
     copy:
       src: dot_env
-      dest: /home/devops/colosseum/.env
+      dest: "{{ install_folder }}/colosseum/.env"
       decrypt: true
       owner: devops
       group: devops
@@ -31,11 +31,11 @@
 
   - name: Start worker
     shell: |
-      while [[ true ]]; do /home/devops/pyenv/shims/python3 -m poetry run python3 tournament_online.py; done &
-      while [[ true ]]; do /home/devops/pyenv/shims/python3 -m poetry run python3 tournament_online.py; done &
+      while [[ true ]]; do {{ install_folder }}/pyenv/shims/python3 -m poetry run python3 tournament_online.py; done &
+      while [[ true ]]; do {{ install_folder }}/pyenv/shims/python3 -m poetry run python3 tournament_online.py; done &
     args:
       executable: /bin/bash
-      chdir: /home/devops/colosseum
+      chdir: "{{ install_folder }}/colosseum"
 
   become: true
   become_method: su
