--- a/ansible/roles/web_server/tasks/main.yml
+++ b/ansible/roles/web_server/tasks/main.yml
@@ -12,21 +12,21 @@
   - name: Checkout colosseum_website
     git:
       repo: https://github.com/h3nnn4n/colosseum_website
-      dest: /home/devops/colosseum_website
+      dest: "{{ install_folder }}/colosseum_website"
       version: production
 
   - name: Ensure poetry is available
-    command: /home/devops/pyenv/shims/python -m pip install poetry
+    command: "{{ install_folder }}/pyenv/shims/python -m pip install poetry"
 
   - name: Install project deps with Poetry
-    command: /home/devops/pyenv/shims/python3 -m poetry install
+    command: "{{ install_folder }}/pyenv/shims/python3 -m poetry install"
     args:
-      chdir: /home/devops/colosseum_website
+      chdir: "{{ install_folder }}/colosseum_website"
 
   - name: Decrypt and copy secret file
     copy:
       src: dot_env
-      dest: /home/devops/colosseum_website/.env
+      dest: "{{ install_folder }}/colosseum_website/.env"
       decrypt: true
       owner: devops
       group: devops
@@ -35,18 +35,18 @@
   - name: Run django migrations
     shell: |
       DJANGO_SETTINGS_MODULE=colosseum_website.settings.production \
-      /home/devops/pyenv/shims/python3 -m poetry run python3 manage.py migrate
+      {{ install_folder }}/pyenv/shims/python3 -m poetry run python3 manage.py migrate
     args:
       executable: /bin/bash
-      chdir: /home/devops/colosseum_website
+      chdir: {{ install_folder }}/colosseum_website
 
   - name: Run django collectstatic
     shell: |
       DJANGO_SETTINGS_MODULE=colosseum_website.settings.production \
-      /home/devops/pyenv/shims/python3 -m poetry run python3 manage.py collectstatic --no-input
+      {{ install_folder }}/pyenv/shims/python3 -m poetry run python3 manage.py collectstatic --no-input
     args:
       executable: /bin/bash
-      chdir: /home/devops/colosseum_website
+      chdir: "{{ install_folder }}/colosseum_website"
 
   - name: Stop gunicorn
     command: |
@@ -56,9 +56,9 @@
   - name: Ensure Gunicorn is running
     shell: |
       DJANGO_SETTINGS_MODULE=colosseum_website.settings.production \
-      /home/devops/pyenv/shims/python3 -m poetry run gunicorn \
+      {{ install_folder }}/pyenv/shims/python3 -m poetry run gunicorn \
         colosseum_website.wsgi \
-        --bind=unix:/home/devops/colosseum_website/gunicorn.sock \
+        --bind=unix:{{ install_folder }}/colosseum_website/gunicorn.sock \
         --keep-alive 10 \
         --access-logfile access.log \
         --log-level info \
@@ -69,7 +69,7 @@
         --workers 5 > stuff.log &
     args:
       executable: /bin/bash
-      chdir: /home/devops/colosseum_website
+      chdir: "{{ install_folder }}/colosseum_website"
 
   become: yes
   become_method: su
