Fix postgres not listening to remote connections

--- a/ansible/roles/postgres/tasks/main.yml
+++ b/ansible/roles/postgres/tasks/main.yml
@@ -22,11 +22,6 @@
     name: postgresql
     enabled: yes
 
-- name: Ensure postgres is running
-  service:
-    name: postgresql
-    state: started
-
 - name: Create app database
   postgresql_db:
     state: present
@@ -51,3 +46,16 @@
     privs: all
   become: yes
   become_user: postgres
+
+# FIXME: We should probably have our own config file and copy it over
+- name: Ensure postgres is listening to remote connections
+  lineinfile:
+    path: /etc/postgresql/12/main/postgresql.conf
+    regexp: '^listen_addresses ='
+    line: "listen_addresses = '*'"
+
+# FIXME: We should check if we need a restart or not
+- name: Ensure postgres is running and restarted
+  service:
+    name: postgresql
+    state: restarted
