--- a/ansible/roles/colosseum_worker/tasks/main.yml
+++ b/ansible/roles/colosseum_worker/tasks/main.yml
@@ -4,7 +4,7 @@
     ansible.builtin.git:
       repo: 'https://github.com/h3nnn4n/colosseum'
       dest: '{{ install_folder }}/colosseum'
-      version: production
+      version: "{{ deploy_branch }}"
 
   - name: Ensure poetry is available
     command: "{{ install_folder }}/pyenv/shims/python -m pip install poetry"
