Install nmap during bootstrap
This is mostly to help ensure that services are
1) Up and Running
2) Not blocked by the firewall
3) Reachable

--- a/ansible/roles/bootstrap/tasks/main.yml
+++ b/ansible/roles/bootstrap/tasks/main.yml
@@ -16,6 +16,7 @@
       - python-apt
       - python3-apt
       - sudo
+      - nmap
     state: present
     update_cache: yes
     cache_valid_time: 3600
